Update: name instead of display name #4