@@ -48,6 +48,7 @@ public class Playback implements PlaybackInterface {
     private BukkitTask countdownTask;
     private BukkitTask blockPlayerTask;
     private BukkitTask ghostPlayerTask;
+    private PlayerTeam team;
 
 
     public Playback(Player player, RecordingData recordingData, String courseName) {
@@ -88,7 +89,7 @@ public class Playback implements PlaybackInterface {
         boolean ghostPlayerInvisible = ParkourGhost.getPlugin().getConfig().getBoolean("ghostplayer.invisible");
 
         Scoreboard scoreboard = new Scoreboard();
-        PlayerTeam team = new PlayerTeam(scoreboard, "Ghost");
+        team = new PlayerTeam(scoreboard, "Ghost");
         team.setCollisionRule(Team.CollisionRule.NEVER);
         if(!seeUsername) {
             team.setNameTagVisibility(Team.Visibility.NEVER);
@@ -97,12 +98,12 @@ public class Playback implements PlaybackInterface {
             ghostPlayer.setInvisible(true);
             team.setSeeFriendlyInvisibles(true);
         }
-        scoreboard.addPlayerToTeam(serverPlayer.getDisplayName().getString(), team);
-        scoreboard.addPlayerToTeam(ghostPlayer.getDisplayName().getString(), team);
+        scoreboard.addPlayerToTeam(serverPlayer.getName().getString(), team);
+        scoreboard.addPlayerToTeam(ghostPlayer.getName().getString(), team);
 
         serverPlayer.connection.send(ClientboundSetPlayerTeamPacket.createAddOrModifyPacket(team, true));
 
-        MovementData firstPos = recordingData.getMovementData().get(0);
+        MovementData firstPos = recordingData.getMovementData().getFirst();
 
         // Enable all skin layers
         SynchedEntityData dataWatcherGhost = ghostPlayer.getEntityData();
@@ -227,6 +228,7 @@ public class Playback implements PlaybackInterface {
             ghostPlayer.remove(Entity.RemovalReason.KILLED);
             serverPlayer.connection.send(new ClientboundPlayerInfoRemovePacket(Collections.singletonList(ghostPlayer.getUUID())));
             serverPlayer.connection.send(new ClientboundRemoveEntitiesPacket(ghostPlayer.getId()));
+            serverPlayer.connection.send(ClientboundSetPlayerTeamPacket.createRemovePacket(team));
         }
 
         isPlayingBack = false;
